# Midi2X11key

./: CMakeLists.txt  LICENSE  README.md  config_example.json  main.cpp  version.h.in
.github/workflows/: cmake.yml
